Dodanie podstawowych skryptów do dokumentu .html

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 
 <body>
 
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/what-input.min.js"></script>
+	<script src="assets/js/foundation.min.js"></script>
 	<script src="assets/js/app.js"></script>
 </body>
 
