--- a/src/login.html
+++ b/src/login.html
@@ -6,48 +6,21 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Strona logowania</title>
+	<title>efi3 Strona logowania</title>
+
+	<link rel="icon" href="assets/img/logo.png">
 
 	<link rel="stylesheet" href="assets/css/app.css">
+
+	<!-- Font Awesome Stylesheet -->
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
 
 <body>
 
-	<main>
-		<section class="login_wrapper">
-			<div class="row">
-				<div class="small-10 small-centered columns">
-					<div class="row">
-						<div class="small-12 medium-3 columns">
-							<div class="logo_container">
-								<a href="#">
-									<img class="logo" src="assets/img/logo_vector.svg">
-								</a>
-							</div>
-						</div>
-						<div class="login_place small-12 medium-6 medium-centered columns">
-							<div class="login_header">
-								<h1>Login</h1>
-								<span>Aby zaimportować dane zaloguj się do swojego banku</span>
-							</div>
-							<img class="user_photo" src="assets/img/user_photo.png">
-							<span class="user_id"><strong>127633223</strong></span>
-							<form>
-								<input id="password" type="text">
-								<button id="change">SELECT OTHER</button>
-								<button id="submit">GO</button>
-							</form>
-						</div>
-						<div class="small-12 medium-3 columns"></div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</main>
-
 	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/what-input.min.js"></script>
 	<script src="assets/js/foundation.min.js"></script>
+	<script src="assets/js/what-input.min.js"></script>
 	<script src="assets/js/app.js"></script>
 </body>
 
