--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,21 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Site</title>
+	<title>Strona główna</title>
+
+	<link rel="icon" href="assets/img/logo.png">
 
 	<link rel="stylesheet" href="assets/css/app.css">
+
+	<!-- Font Awesome Stylesheet -->
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
 
 <body>
 
 	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/what-input.min.js"></script>
 	<script src="assets/js/foundation.min.js"></script>
+	<script src="assets/js/what-input.min.js"></script>
 	<script src="assets/js/app.js"></script>
 </body>
 
