Dodanie wstępnej struktury strony w pliku login.html

--- a/src/login.html
+++ b/src/login.html
@@ -18,6 +18,51 @@
 
 <body>
 
+	<main>
+		<div class="row">
+			<div class="small-12 medium-3 columns">
+				<div class="logo-container">
+					<img src="assets/img/logo_vector.svg" alt="Logo">
+				</div>
+			</div>
+			<div class="small-10 medium-6 small-centered columns end">
+				<div class="login-box">
+					<header>
+						<h1>Login</h1>
+						<h2>Aby zaimportować dane, zaloguj się do swojego banku.</h2>
+					</header>
+					<section>
+						<div class="login-space">
+							<div class="user-photo"></div>
+							<form>
+								<p class="login-number">127633223</p>
+								<i></i>
+								<input type="password">
+								<i></i>
+								<button>Select other</button>
+								<input type="submit">
+							</form>
+						</div>
+					</section>
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<a href="#">Security</a>
+						</li>
+						<li>
+							<a href="#">Log in</a>
+						</li>
+						<li>
+							<a href="#">Contact</a>
+						</li>
+					</ul>
+					<i></i>
+				</nav>
+			</div>
+		</div>
+	</main>
+
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/foundation.min.js"></script>
 	<script src="assets/js/what-input.min.js"></script>
