Ustawienie responsywności na wszystkich urządzeniach

--- a/src/login.html
+++ b/src/login.html
@@ -21,7 +21,7 @@
 	<main>
 		<div class="main-container">
 			<div class="inner-container row">
-				<div class="small-12 medium-3 columns">
+				<div class="small-10 medium-3 small-centered medium-uncentered columns">
 					<a href="#">
 						<div class="logo-container">
 							<img src="assets/img/logo_vector.svg" alt="Logo" title="Logo">
