--- a/src/login.html
+++ b/src/login.html
@@ -42,6 +42,8 @@
 										<strong>127633223</strong>
 										<i id="clear-login" class="fa fa-times"></i>
 									</p>
+									<p class="login-number-tip">Wpisz swój numer użytkownika</p>
+									<input class="login-number-input" type="text">
 									<div class="password-input">
 										<input type="password">
 										<i id="keyboard-activate" class="fa fa-keyboard-o"></i>
