Wstępnie dodanie połączenia z API za pomocą AJAX

--- a/src/login.html
+++ b/src/login.html
@@ -42,13 +42,18 @@
 										<strong>127633223</strong>
 										<i id="clear-login" class="fa fa-times"></i>
 									</p>
+
 									<p class="login-number-tip">Wpisz swój numer użytkownika</p>
+
 									<input class="login-number-input" type="text">
+
 									<div class="password-input">
-										<input type="password">
+										<input id="password" type="password">
 										<i id="keyboard-activate" class="fa fa-keyboard-o"></i>
 									</div>
+
 									<button class="other-button">Select other</button>
+
 									<input class="main-button" type="submit" value="GO">
 								</form>
 							</div>
