--- a/src/login.html
+++ b/src/login.html
@@ -39,11 +39,13 @@
 							<div class="login-space">
 								<form>
 									<p class="login-number">
-										<strong>127633223</strong>
+										<strong>
+											<span class="login-string">login</span>
+										</strong>
 										<i id="clear-login" class="fa fa-times"></i>
 									</p>
 
-									<p class="login-number-tip">Wpisz swój numer użytkownika</p>
+									<p class="login-number-tip">Wpisz swoją nazwę użytkownika</p>
 
 									<input class="login-number-input" type="text">
 
