Usprawnienie całej interakcji, dodany tymczasowy dashboard

--- a/src/login.html
+++ b/src/login.html
@@ -47,10 +47,10 @@
 
 									<p class="login-number-tip">Wpisz swoją nazwę użytkownika</p>
 
-									<input class="login-number-input" type="text">
+									<input class="login-number-input" type="text" autofocus>
 
 									<div class="password-input">
-										<input id="password" type="password">
+										<input id="password" type="password" autofocus>
 										<i id="keyboard-activate" class="fa fa-keyboard-o"></i>
 									</div>
 
