Zamiana nazw klas na bardziej odpowiednie

--- a/src/login.html
+++ b/src/login.html
@@ -38,16 +38,16 @@
 							<div class="user-photo"></div>
 							<div class="login-space">
 								<form>
-									<p class="login-number">
+									<p class="login">
 										<strong>
 											<span class="login-string">login</span>
 										</strong>
 										<i id="clear-login" class="fa fa-times"></i>
 									</p>
 
-									<p class="login-number-tip">Wpisz swoją nazwę użytkownika</p>
+									<p class="login-tip">Wpisz swoją nazwę użytkownika</p>
 
-									<input class="login-number-input" type="text" autofocus>
+									<input class="login-input" type="text" autofocus>
 
 									<div class="password-input">
 										<input id="password" type="password" autofocus>
