Poprawienie wyświetlania alertów, zmniejszenie rozmiaru okienka z alertami do szerokości inputów

--- a/src/login.html
+++ b/src/login.html
@@ -50,7 +50,7 @@
 									<input class="login-input" type="text" autofocus>
 
 									<div class="password-input">
-										<input id="password" type="password" autofocus>
+										<input id="password" type="password">
 										<i id="keyboard-activate" class="fa fa-keyboard-o"></i>
 									</div>
 
