--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -18,9 +18,38 @@
 
 <body>
 
-	<h1 style="padding-top: 40vh; color: #000000;">Tutaj kiedyś będzie dashboard systemu bankowego, a w nim miliony $$$* !</h1>
+	<header>
+		<div class="header-container">
 
-	<h6 style="padding-top: 30vh; color: #000000;">* $ czyli funkcje jQuery, suchy żart początkującego programisty :-)</h6>
+			<div class="row">
+
+				<div class="medium-5 columns">
+					<div class="logo-user-container">
+						<div class="logo-dashboard-container">
+							<img src="assets/img/logo_vector.svg" alt="Logo" title="Logo">
+						</div>
+						<div class="user-dashboard-photo"></div>
+					</div>
+				</div>
+
+				<div class="medium-4 columns">
+					<nav>
+
+					</nav>
+				</div>
+
+				<div class="medium-3 columns">
+
+				</div>
+
+			</div>
+
+		</div>
+	</header>
+
+	<main>
+
+	</main>
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/foundation.min.js"></script>
