--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -23,7 +23,7 @@
 
 			<div class="row">
 
-				<div class="medium-5 columns">
+				<div class="medium-2 columns">
 					<div class="logo-user-container">
 						<div class="logo-dashboard-container">
 							<img src="assets/img/logo_vector.svg" alt="Logo" title="Logo">
@@ -32,14 +32,37 @@
 					</div>
 				</div>
 
-				<div class="medium-4 columns">
+				<div class="medium-3 columns">
+					<div class="user-details">
+						<h2>Jan Kowalski</h2>
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+						<i class="fa fa-cog" aria-hidden="true"></i>
+					</div>
+				</div>
+			
+				<div class="medium-5 columns">
 					<nav>
-
+						<div class="dashboard-menu">
+							<ul>
+								<li>
+									<a href="#">HOME</a>
+								</li>
+								<li>
+									<a href="#">ANALYSE</a>
+								</li>
+								<li>
+									<a href="#">PLAN</a>
+								</li>
+								<li>
+									<a href="#">EARN</a>
+								</li>
+							</ul>
+						</div>
 					</nav>
 				</div>
 
-				<div class="medium-3 columns">
-
+				<div class="medium-2 columns">
+					
 				</div>
 
 			</div>
