Uporządkowanie plików przed kodowaniem

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -17,67 +17,13 @@
 </head>
 
 <body>
-
-	<header>
-		<div class="header-container">
-
-			<div class="row">
-
-				<div class="medium-2 columns">
-					<div class="logo-user-container">
-						<div class="logo-dashboard-container">
-							<img src="assets/img/logo_vector.svg" alt="Logo" title="Logo">
-						</div>
-						<div class="user-dashboard-photo"></div>
-					</div>
-				</div>
-
-				<div class="medium-3 columns">
-					<div class="user-details">
-						<h2>Jan Kowalski</h2>
-						<i class="fa fa-envelope" aria-hidden="true"></i>
-						<i class="fa fa-cog" aria-hidden="true"></i>
-					</div>
-				</div>
-			
-				<div class="medium-5 columns">
-					<nav>
-						<div class="dashboard-menu">
-							<ul>
-								<li>
-									<a href="#">HOME</a>
-								</li>
-								<li>
-									<a href="#">ANALYSE</a>
-								</li>
-								<li>
-									<a href="#">PLAN</a>
-								</li>
-								<li>
-									<a href="#">EARN</a>
-								</li>
-							</ul>
-						</div>
-					</nav>
-				</div>
-
-				<div class="medium-2 columns">
-					
-				</div>
-
-			</div>
-
-		</div>
-	</header>
-
-	<main>
-
-	</main>
+	
+	
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/foundation.min.js"></script>
 	<script src="assets/js/what-input.min.js"></script>
-	<script src="assets/js/app.js"></script>
+	<script src="assets/js/dashboard.js"></script>
 </body>
 
 </html>
