Wstępne ostylowanie informacji o użytkowniku oraz menu w header dashboard

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -17,8 +17,47 @@
 </head>
 
 <body>
-	
-	
+
+	<header>
+		<div class="header-container">
+			<div class="row">
+				<div class="medium-5 columns">
+					<a href="#">
+						<div class="header-logo-container">
+							<img src="assets/img/logo_vector.svg" alt="Logo" title="Logo">
+						</div>
+					</a>
+					<div class="header-user-photo"></div>
+					<div class="header-user-info">
+						<h2>Michał Milanowski</h2>
+						<span class="fa fa-envelope header-user-icons" aria-hidden="true"></span>
+						<span class="fa fa-cog header-user-icons config-icon" aria-hidden="true"></span>
+					</div>
+				</div>
+				<div class="medium-5 columns">
+					<nav>
+						<ul class="header-menu">
+							<li>
+								<a href="#">HOME</a>
+							</li>
+							<li>
+								<a href="#">ANALYSE</a>
+							</li>
+							<li>
+								<a href="#">PLAN</a>
+							</li>
+							<li>
+								<a href="#">EARN</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				<div class="medium-2 columns">
+
+				</div>
+			</div>
+		</div>
+	</header>
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/foundation.min.js"></script>
