--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -59,6 +59,64 @@
 		</div>
 	</header>
 
+	<main>
+		<section class="dashboard-main">
+			<div class="row">
+				<div class="medium-12 columns">
+					<h1>Finance life stream</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="medium-3 columns">
+					<h2>Balance</h2>
+					<p>
+						<strong class="balance"></strong>
+						<span>PLN</span>
+					</p>
+				</div>
+
+				<div class="medium-3 columns">
+					<h2>Available funds</h2>
+					<p>
+						<strong class="funds"></strong>
+						<span>PLN</span>
+					</p>
+				</div>
+
+				<div class="medium-3 columns">
+					<h2>Sheduled payments</h2>
+					<p>
+						<strong class="payments"></strong>
+						<span>PLN</span>
+					</p>
+				</div>
+
+				<div class="medium-3 columns">
+
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="medium-6 columns">
+
+				</div>
+				<div class="medium-6 columns">
+					<h2>History</h2>
+					<div class="history">
+						<div class="history-line">
+							<span class="history-date"></span>
+							<span class="history-title"></span>
+							<div class="history-price">
+								<span class="history-funds"><strong></strong></span>
+								<span class="history-currency">PLN</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
+
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/foundation.min.js"></script>
 	<script src="assets/js/what-input.min.js"></script>
