--- a/src/budgets.html
+++ b/src/budgets.html
@@ -106,17 +106,22 @@
 				<div class="medium-4 columns">
 					<div class="circle first-circle">
 						<div class="circle-content">
-							<div>Home</div>
-							<div>100 of 200</div>
+							<div>Home
+								<br>
+								<strong>100</strong> of 200
+							</div>
 						</div>
+						<div class="close-button">x</div>
 					</div>
 				</div>
 
 				<div class="medium-4 columns">
 					<div class="circle second-circle">
 						<div class="circle-content">
-							<div>Home</div>
-							<div>100 of 200</div>
+							<div>Studies
+								<br>
+								<strong>850</strong> of 1000
+							</div>
 						</div>
 					</div>
 				</div>
@@ -124,8 +129,10 @@
 				<div class="medium-4 columns">
 					<div class="circle third-circle">
 						<div class="circle-content">
-							<div>Home</div>
-							<div>100 of 200</div>
+							<div>Food
+								<br>
+								<strong>50</strong> of 300
+							</div>
 						</div>
 					</div>
 				</div>
@@ -135,8 +142,10 @@
 				<div class="medium-4 columns">
 					<div class="circle fourth-circle">
 						<div class="circle-content">
-							<div>Home</div>
-							<div>100 of 200</div>
+							<div>Car
+								<br>
+								<strong>100</strong> of 200
+							</div>
 						</div>
 					</div>
 				</div>
@@ -144,8 +153,10 @@
 				<div class="medium-4 columns">
 					<div class="circle fifth-circle">
 						<div class="circle-content">
-							<div>Home</div>
-							<div>100 of 200</div>
+							<div>Cinema
+								<br>
+								<strong>20</strong> of 50
+							</div>
 						</div>
 					</div>
 				</div>
@@ -160,6 +171,7 @@
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/foundation.min.js"></script>
 	<script src="assets/js/what-input.min.js"></script>
+	<script src="assets/js/budgets.js"></script>
 </body>
 
 </html>
